--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
     "redux-form": "^8.3.6",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
+    "thunk": "0.0.1",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
     "webpack-dev-middleware": "3.7.2",
